--- a/index.html
+++ b/index.html
@@ -8,16 +8,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
     <script src="js/main.js"></script>
 </head>
 
 <body>
-    <div class="container">
-        <div class="box">Header</div>
-        <div draggable="true" class="box">A</div>
-        <div draggable="true" class="box">B</div>
-        <div draggable="true" class="box">C</div>
+    <div class="container mt-5 mb-5">
+        <div class="box color-gradient height-header">
+            <div class="font-family-header title-header">Generate Question </div>
+            <form class="form-right">
+                <button type="button" class="btn btn-grad text-white">Regenerate All</button>
+            </form>
+        </div>
+        <div draggable="true" class="box height-content border-color">
+            <h5 class="form-right header-content">drag and drop for swipe question</h4>
+                </br>
+            </h5>
+            <p style="margin-top: 10px">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
+            <div class="d-flex flex-row-reverse bd-highlight mg-top">
+                <div class="p-2 bd-highlight">
+                    <button type="button" class="btn btn-danger">Flag</button>
+                </div>
+                <div class="p-2 bd-highlight">
+                    <button type="button" class="btn btn-success">Regenerate</button>
+                </div>
+                <div class="p-2 bd-highlight">
+                    <button type="button" class="btn btn-primary">MCQ</button>
+                </div>
+            </div>
+        </div>
+        <div draggable="true" class="box height-content border-color">
+            <h5 class="form-right header-content">drag and drop for swipe question</h4>
+                </br>
+            </h5>
+            <p style="margin-top: 10px">"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo."</p>
+            <div class="d-flex flex-row-reverse bd-highlight mg-top">
+                <div class="p-2 bd-highlight">
+                    <button type="button" class="btn btn-danger">Flag</button>
+                </div>
+                <div class="p-2 bd-highlight">
+                    <button type="button" class="btn btn-success">Regenerate</button>
+                </div>
+                <div class="p-2 bd-highlight">
+                    <button type="button" class="btn btn-primary">MCQ</button>
+                </div>
+            </div>
+        </div>
+        <div draggable="true" class="box height-content border-color">
+            <h5 class="form-right header-content">drag and drop for swipe question</h4>
+                </br>
+            </h5>
+            <p style="margin-top: 10px">"But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder
+                of human happiness."</p>
+            <div class="d-flex flex-row-reverse bd-highlight mg-top">
+                <div class="p-2 bd-highlight">
+                    <button type="button" class="btn btn-danger">Flag</button>
+                </div>
+                <div class="p-2 bd-highlight">
+                    <button type="button" class="btn btn-success">Regenerate</button>
+                </div>
+                <div class="p-2 bd-highlight">
+                    <button type="button" class="btn btn-primary">MCQ</button>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
+
+</html>
 
 </html>
